create github pages

--- a/page1.html
+++ b/page1.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page for free</a></section><section once="footers" class="cid-rR0MeZv59n" id="footer7-h">
+<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section once="footers" class="cid-rR0MeZv59n" id="footer7-h">
 
     
 
@@ -89,7 +89,7 @@
                 <h2 class="align-center pb-3 mbr-fonts-style display-1"><strong>
                     ABOUT US</strong></h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
-                    What initially started as the clothing line Tees By Cooper a Rockhampton fashion label<br><br>I am passionate about creating and producing work that makes our clients go wow. What first started as a project from my own clothing line and now has turned into a custom printer for clothing</h3>
+                    What initially started as the clothing line Tees By Cooper a Rockhampton fashion label. Turned into printing shirts for other local businesses and event printing and then we saw a need in the market for affordable, quality and a quick turnaround<br><br>I am passionate about creating and producing work that makes our clients go wow. What first started as a project from my own clothing line and now has turned into a custom printer for clothing<br><br></h3>
                 
             </div>
         </div>
