--- a/page1.html
+++ b/page1.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="footers" class="cid-rR0MeZv59n" id="footer7-h">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site</a></section><section once="footers" class="cid-rR0MeZv59n" id="footer7-h">
 
     
 
