create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/m">website design templates</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
 
     
 
@@ -325,7 +325,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7d5XQbNFWI4DiyX9kWLjA8pT9ygUeK53aeZhlMRN3ZzSaDubQ2yRFAOud8AvDbj8v+3Y31mnH15ZA45m4HGuvnGVdftQSay2MmUqSBiXlxyGJjTubYVeK6Y0QN/Y2kK3">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sHAdJIBZfxtVXp12Su0jvu5Cd6vFviXkvTU6KxPzRDo3l6tugNUngTIkIvup40hsbHSXuHIYXEdNJJAjZUnvGX9D68TDV5LrBRFD4MC210WenL3FNRUZjtRgtv1q+pqi">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form! We will be in contact soon</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
