--- a/page1.html
+++ b/page1.html
@@ -53,14 +53,14 @@
                         About Us
                     </a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="eventprinting.html">&nbsp;Printing</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:0491147682">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="tel:0491147682">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>0491 147 682</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section once="footers" class="cid-rR0MeZv59n" id="footer7-h">
+<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="footers" class="cid-rR0MeZv59n" id="footer7-h">
 
     
 
