create github pages

--- a/page1.html
+++ b/page1.html
@@ -53,14 +53,14 @@
                         About Us
                     </a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="eventprinting.html">&nbsp;Printing</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="tel:0491147682">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:0491147682">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>0491 147 682</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section once="footers" class="cid-rR0MeZv59n" id="footer7-h">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section once="footers" class="cid-rR0MeZv59n" id="footer7-h">
 
     
 
@@ -89,7 +89,7 @@
                 <h2 class="align-center pb-3 mbr-fonts-style display-1"><strong>
                     ABOUT US</strong></h2>
                 <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
-                    What initially started as the clothing line Tees By Cooper a Rockhampton fashion label. Turned into printing shirts for other local businesses and event printing and then we saw a need in the market for affordable, quality and a quick turnaround<br><br>I am passionate about creating and producing work that makes our clients go wow. What first started as a project from my own clothing line and now has turned into a custom printer for clothing<br><br></h3>
+                    What initially started as the clothing line Tees By Cooper a Rockhampton fashion label. Turned into printing shirts for other local businesses and event printing and then we saw a need in the market for affordable, quality and a quick turnaround.<br><br>I am passionate about creating and producing work that makes our clients go wow. What first started as a project from my own clothing line and now has turned into a custom printer for clothing<br><br></h3>
                 
             </div>
         </div>
