--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                         About Us
                     </a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="eventprinting.html">&nbsp;Printing</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="tel:0491147682">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:0491147682">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>0491 147 682</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">free bootstrap themes</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
+<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="cid-rQZVCjP8je mbr-parallax-background" id="header2-4">
 
     
 
@@ -317,7 +317,7 @@
             <div class="title col-12 col-lg-8">
                 <h2 class="mbr-section-title align-center pb-3 mbr-fonts-style display-1"><strong>
                     Contact Us</strong></h2>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-4">Phone: 0491 147 682<div>Email: rockhamptonshirtprinting@gmail.com</div></h3>
+                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-4"><strong>Phone: 0491 147 682</strong><div><strong>Email: rockhamptonshirtprinting@gmail.com</strong></div></h3>
             </div>
         </div>
     </div>
@@ -325,7 +325,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fo/KvRhrvq5EeNuFkGm41Wnlza7e4EG3UPUrQy1iZPSmyA2pDEwTtzqzo3n3l8pRcKLigWt1uqT7PCgZpARl1oMP5zV1CakGZpGCqN4S/gfBXjBFzsNBfAG5L0iSBcyz">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BZpU6rFPHP68mTkk80D4+vvHhCpY4jCuqpvVCKVQvEC98T0l8GGwwhAOHTpJ5Nd7RAXBgpd1D5ZTSIKt2Oh0nKrYIQL2LPwbGEr9a4P1tkvAYTxrTXiKYgz4YfyuT/AB">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form! We will be in contact soon</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
