--- a/printing.html
+++ b/printing.html
@@ -53,14 +53,14 @@
                         About Us
                     </a>
                 </li><li class="nav-item"><a class="nav-link link text-black display-4" href="eventprinting.html">&nbsp;Printing</a></li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="tel:0491147682">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-black-outline display-4" href="tel:0491147682">
                     <span class="btn-icon mbri-mobile mbr-iconfont mbr-iconfont-btn">
                     </span>0491 147 682</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="cid-rSCahGNnCC mbr-fullscreen mbr-parallax-background" id="header2-t">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-rSCahGNnCC mbr-fullscreen mbr-parallax-background" id="header2-t">
 
     
 
@@ -72,7 +72,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
                     EVENT OR WORK PRINTING</h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">We print shirts for everthing from events like family reunions,bucks parties 18ths and 21st to even professional events and some work uniforms. &nbsp;Contact us today to see how we can bring your dream design&nbsp;to life.</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">We print shirts for everything from events like family reunions,bucks parties 18ths and 21st to even professional events and some work uniforms. &nbsp;Contact us today to see how we can bring your dream design&nbsp;to life.</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-info display-4" href="tel:0491147682">Ask us how?</a></div>
             </div>
         </div>
